# platform.prebuilts.jdk.jdk17

./: Android.bp  BUILD.bazel  manifest.xml  update.sh
darwin-arm64/: release
darwin-arm64/Contents/: Info.plist
darwin-arm64/jmods/: java.compiler.jmod  java.datatransfer.jmod  java.instrument.jmod  java.logging.jmod  java.management.jmod  java.management.rmi.jmod  java.naming.jmod  java.net.http.jmod  java.prefs.jmod  java.rmi.jmod  java.scripting.jmod  java.se.jmod  java.security.jgss.jmod  java.security.sasl.jmod  java.smartcardio.jmod  java.sql.jmod  java.sql.rowset.jmod  java.transaction.xa.jmod  java.xml.crypto.jmod  jdk.accessibility.jmod  jdk.attach.jmod  jdk.charsets.jmod  jdk.crypto.cryptoki.jmod  jdk.crypto.ec.jmod  jdk.dynalink.jmod  jdk.editpad.jmod  jdk.hotspot.agent.jmod  jdk.httpserver.jmod  jdk.incubator.foreign.jmod  jdk.incubator.vector.jmod  jdk.internal.ed.jmod  jdk.internal.jvmstat.jmod  jdk.internal.le.jmod  jdk.internal.opt.jmod  jdk.internal.vm.ci.jmod  jdk.internal.vm.compiler.jmod  jdk.internal.vm.compiler.management.jmod  jdk.jartool.jmod  jdk.javadoc.jmod  jdk.jcmd.jmod  (+25 more)
darwin-arm64/lib/: jspawnhelper  libattach.dylib  libawt.dylib  libawt_lwawt.dylib  libdt_socket.dylib  libextnet.dylib  libfontmanager.dylib  libfreetype.dylib  libinstrument.dylib  libj2gss.dylib  libj2pcsc.dylib  libj2pkcs11.dylib  libjaas.dylib  libjava.dylib  libjavajpeg.dylib  libjawt.dylib  libjdwp.dylib  libjimage.dylib  libjli.dylib  libjsound.dylib  liblcms.dylib  libmanagement.dylib  libmanagement_agent.dylib  (+17 more)
darwin-x86/: release
linux-x86/: release
(+281 files in other folders)
